--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -69,9 +69,15 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
     text-align: center;
 
     width: 60%; /* Reduce the width of the form */
-    margin: 3% auto ; /* Adjust vertical margin */
+    margin: -2% auto ; /* Adjust vertical margin */
 
 
+}
+
+.hero-area {
+  height: 70%;
+  position: relative;
+  z-index: 1;
 }
 
 
