--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -14,10 +14,11 @@
 	<!-- title -->
 	<title>Age Estimations</title>
 	<!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'img/Games/GGicon.png' %}">
+   	<!-- favicon -->
 
+	<link rel="shortcut icon" type="image/png" href="{% static 'img/Games/GGicon.png' %}">
 	<!-- google font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:00,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="{% static 'css/all.min.css' %}">
@@ -36,17 +37,20 @@
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <style>
-                  #main-content{
-                  margin:auto;
-height:107%;
+
+
+     .hero-area{
+
 background: rgb(21,22,51);
 background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
-     }
+  position: relative;
+  z-index: 1;
+		}
 
     .top-header-area {
 
   padding: 15px 0;
-  width:100%;
+
 }
         #video-container, #captured-image {
 
@@ -182,26 +186,48 @@ height:20%;}
 <body>
 
 	<!-- header -->
-<div class="top-header-area" id="sticker">
+	<!-- header -->
+	<div class="top-header-area" id="sticker">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 text-center">
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-                            <!--	<a href="{% url 'index' %}"> -->
-                                <a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-                                </a>
-                            </div>
-						<!-- logo -->
+							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
+							</a>
+						</div>
 
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
 
 								<li>
-									<li>
+									<div class="header-icons">
 
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}" style="font-size: 20px;">Home</a>
+									</div>
+								</li>
+							</ul>
+						</nav>
+						<!-- menu end -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+						<!-- logo -->
+
+						<!-- menu start -->
+						<nav class="main-menu" >
+							<ul>
+
+								<li>
+									<li>
+										<div class="header-icons">
+
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Home</a>
+									</div>
 									</li>
 								</li>
 							</ul>
@@ -209,15 +235,11 @@ height:20%;}
 
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 
 	<!-- end header -->
 
-    <section id="main-content">
+    <div class="hero-area" style="background-size: 120%;">
 
 
 
@@ -274,7 +296,7 @@ height:20%;}
 
 <div class="message-container" id="message-container" style="display: none; width:100%;  font-family: 'Poppins', sans-serif;"></div>
 
-</section><!-- End class main-content -->
+</div><!-- End class main-content -->
   <!-- footer -->
 	<div class="footer-area">
 		<div class="container">
